--- a/section-3-5.org
+++ b/section-3-5.org
@@ -628,6 +628,7 @@ It would be nice to be able to generate streams in which the pairs appear in som
   (stream-take 10 specified-stream))
 #+end_src
 
+
 * Exercise 3.71
 Numbers that can be expressed as the sum of two cubes in more than one way are sometimes called Ramanujan numbers, in honor of the mathematician Srinivasa Ramanujan. Ordered streams of pairs provide an elegant solution to the problem of computing these numbers.  To find a number that can be written as the sum of two cubes in two different ways, we need only generate the stream of pairs of integers $(i, j)$ weighted according to the sum $i^3 + j^3$ (see Exercise 3.70), then search the stream for two consecutive pairs with the same weight.  Write a procedure to generate the Ramanujan numbers.  The first such number is 1,729.  What are the next five?
 
@@ -692,3 +693,133 @@ Numbers that can be expressed as the sum of two cubes in more than one way are s
   '(1729 4104 13832 20683 32832 39312)
   (stream-take 6 (ramanujan-numbers)))
 #+end_src
+
+
+* TODO Exercise 3.72
+In a similar way to Exercise 3.71 generate a stream of all numbers that can be written as the sum of two squares in three different ways (showing how they can be so written).
+
+* TODO Exercise 3.73
+We can model electrical circuits using streams to represent the values of currents or voltages at a sequence of times.  For instance, suppose we have an  RC circuit consisting of a resistor of resistance $R$ and a capacitor of capacitance $C$ in series. The voltage response $v$ of the circuit to an injected current $i$ is determined by the formula in Figure 3.33, whose structure is shown by the accompanying signal-flow diagram.
+
+Write a procedure RC that models this circuit.  RC should take as inputs the values of $R$, $C$, and $dt$ and should return a procedure that takes as inputs a stream representing the current $i$ and an initial value for the capacitor voltage $v_0$ and produces as output the stream of voltages $v$.  For example, you should be able to use RC to model an RC circuit with $R = 5$ ohms, $C = 1$ farad, and a 0.5-second time step by evaluating (define RC1 (RC 5 1 0.5)).  This defines RC1 as a procedure that takes a stream representing the time sequence of currents and an initial capacitor voltage and produces the output stream of voltages.
+
+
+* TODO Exercise 3.74
+Alyssa P. Hacker is designing a system to process signals coming from physical sensors.  One important feature she wishes to produce is a signal that describes the  zero crossings of the input signal.  That is, the resulting signal should be $+1$ whenever the input signal changes from negative to positive, $-1$ whenever the input signal changes from positive to negative, and $0$ otherwise.  (Assume that the sign of a $0$ input is positive.)  For example, a typical input signal with its associated zero-crossing signal would be
+
+
+| $\cdots$ | 1 | 2 | 1.5 | 1 | 0.5 | -0.1 | -2 | -3 | -2 | -0.5 | 0.2 | 3 | 4 | $\cdots$ |
+| $\cdots$ | 0 | 0 |   0 | 0 |   0 |   -1 |  0 |  0 |  0 |    0 |   1 | 0 | 0 | $\cdots$ |
+
+
+In Alyssa’s system, the signal from the sensor is represented as a stream sense-data and the stream zero-crossings is the corresponding stream of zero crossings.  Alyssa first writes a procedure sign-change-detector that takes two values as arguments and compares the signs of the values to produce an appropriate $0, 1, or -1$.  She then constructs her zero-crossing stream as follows:
+
+#+begin_src scheme :eval never
+(define (make-zero-crossings
+         input-stream last-value)
+  (cons-stream
+   (sign-change-detector
+    (stream-car input-stream)
+    last-value)
+   (make-zero-crossings
+    (stream-cdr input-stream)
+    (stream-car input-stream))))
+
+(define zero-crossings
+  (make-zero-crossings sense-data 0))
+#+end_src
+
+Alyssa’s boss, Eva Lu Ator, walks by and suggests that this program is approximately equivalent to the following one, which uses the generalized version of stream-map from Exercise 3.50:
+
+#+begin_src scheme :eval never
+(define zero-crossings
+  (stream-map sign-change-detector
+              sense-data
+              <expression>))
+#+end_src
+
+Complete the program by supplying the indicated <expression>.
+
+
+* TODO Exercise 3.75
+Unfortunately, Alyssa’s zero-crossing detector in Exercise 3.74 proves to be insufficient, because the noisy signal from the sensor leads to spurious zero crossings.  Lem E.  Tweakit, a hardware specialist, suggests that Alyssa smooth the signal to filter out the noise before extracting the zero crossings.  Alyssa takes his advice and decides to extract the zero crossings from the signal constructed by averaging each value of the sense data with the previous value.  She explains the problem to her assistant, Louis Reasoner, who attempts to implement the idea, altering Alyssa’s program as follows:
+
+#+begin_src scheme :eval never
+(define (make-zero-crossings
+         input-stream last-value)
+  (let ((avpt
+         (/ (+ (stream-car input-stream)
+               last-value)
+            2)))
+    (cons-stream
+     (sign-change-detector avpt last-value)
+     (make-zero-crossings
+      (stream-cdr input-stream) avpt))))
+#+end_src
+
+This does not correctly implement Alyssa’s plan.  Find the bug that Louis has installed and fix it without changing the structure of the program.  (Hint: You will need to increase the number of arguments to make-zero-crossings.)
+
+
+* TODO Exercise 3.76
+Eva Lu Ator has a criticism of Louis’s approach in Exercise 3.75.  The program he wrote is not modular, because it intermixes the operation of smoothing with the zero-crossing extraction.  For example, the extractor should not have to be changed if Alyssa finds a better way to condition her input signal.  Help Louis by writing a procedure smooth that takes a stream as input and produces a stream in which each element is the average of two successive input stream elements. Then use smooth as a component to implement the zero-crossing detector in a more modular style.
+
+
+* TODO Exercise 3.77
+The integral procedure used above was analogous to the “implicit” definition of the infinite stream of integers in 3.5.2.  Alternatively, we can give a definition of integral that is more like integers-starting-from (also in 3.5.2):
+
+#+begin_src scheme :eval never
+(define (integral
+         integrand initial-value dt)
+  (cons-stream
+   initial-value
+   (if (stream-null? integrand)
+       the-empty-stream
+       (integral
+        (stream-cdr integrand)
+        (+ (* dt (stream-car integrand))
+           initial-value)
+        dt))))
+#+end_src
+
+When used in systems with loops, this procedure has the same problem as does our original version of integral.  Modify the procedure so that it expects the integrand as a delayed argument and hence can be used in the solve procedure shown above.
+
+* TODO Exercise 3.78
+Consider the problem of designing a signal-processing system to study the homogeneous second-order linear differential equation
+
+\begin{equation*}
+\frac{d^2y}{dt^2} - a \frac{dy}{dt} - by = 0.
+\end{equation*}
+
+The output stream, modeling $y$, is generated by a network that contains a loop. This is because the value of $d^2 y/dt^2$ depends upon the values of $y$ and $dy/dt$ and both of these are determined by integrating $d^2y/dt^2$.  The diagram we would like to encode is shown in Figure 3.35.  Write a procedure solve-2nd that takes as arguments the constants $a, b, and dt$ and the initial values $y_0$ and $dy_0$ for $y$ and $dy/d t$ and generates the stream of successive values of $y$.
+
+
+* TODO Exercise 3.79
+Generalize the solve-2nd procedure of Exercise 3.78 so that it can be used to solve general second-order differential equations $d^2y/dt^2 = f(dy/dt, y)$.
+
+
+* TODO Exercise 3.80
+A  series RLC circuit consists of a resistor, a capacitor, and an inductor connected in series, as shown in Figure 3.36. If $R$, $L$, and $C$ are the resistance, inductance, and capacitance, then the relations between voltage $(v)$ and current $(i)$ for the three components are described by the equations
+
+\begin{align*}
+v_R &= i_RR,\\
+v_L &= L \frac{di_L}{dt},\\
+i_C &= C \frac{dv_C}{dt},
+\end{align*}
+
+and the circuit connections dictate the relations
+
+\begin{align*}
+i_R &= i L= −i C,\\
+v C &= v L+v R.
+\end{align*}
+
+Combining these equations shows that the state of the circuit (summarized by $v_C$, the voltage across the capacitor, and $i_L$, the current in the inductor) is described by the pair of differential equations
+
+\begin{align*}
+\frac{dv_C}{dt} &= -\frac{i_L}{C},\\
+\frac{di_L}{dt} &= \frac{1}{L}v_C - \frac{R}{L} i_L.
+\end{align*}
+
+The signal-flow diagram representing this system of differential equations is shown in Figure 3.37.
+
+Write a procedure RLC that takes as arguments the parameters $R$, $L$, and $C$ of the circuit and the time increment $dt$.  In a manner similar to that of the $RC$ procedure of Exercise 3.73, RLC should produce a procedure that takes the initial values of the state variables, $v_{C_0}$ and $i_{L_0}$, and produces a pair (using cons) of the streams of states $v_C$ and $i_L$.  Using RLC, generate the pair of streams that models the behavior of a series RLC circuit with $R=1$ ohm, $C=0.2$ farad, $L=1$ henry, $dt = 0.1$ second, and initial values $i_{L_0}=0$ amps and $v_{C_0}=10$ volts.
